--- a/src/main/resources/templates/member/home.html
+++ b/src/main/resources/templates/member/home.html
@@ -2,12 +2,10 @@
 <html lang="en" xmlns:th = http://www.thymeleaf.org>
 <head>
     <meta charset="UTF-8">
-    <title>회원 상세 조회</title>
+    <title>HOME</title>
 </head>
 <body>
 <div th:replace="member/header :: headerFragment"></div>
-
-<h1>회원 상세 조회</h1>
 
 </body>
 </html>
