--- a/src/main/resources/templates/member/member-create.html
+++ b/src/main/resources/templates/member/member-create.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>회원가입</title>
 </head>
 <body>
+    <div th:replace="member/header :: headerFragment"></div>
     <h1>회워가입</h1>
     <form id="memberCreateForm">
         <div>
