--- a/src/main/resources/templates/member/member-list.html
+++ b/src/main/resources/templates/member/member-list.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th = http://www.thymeleaf.org>
 <head>
     <meta charset="UTF-8">
     <title>회원 목록 조회</title>
 </head>
 <body>
-    <h1></h1>
+<div th:replace="member/header :: headerFragment"></div>
+
+    <h1>회원 목록 조회</h1>
+
+    <table>
+        <tr><th>이름</th><th>이메일</th><th>비밀번호</th></tr>
+        <tr th:each="member: ${memberList}">
+            <td th:text="${member.name}"></td>
+            <td th:text="${member.email}"></td>
+            <td th:text="${member.password}"></td>
+        </tr>
+    </table>
 
 </body>
 </html>
