--- a/src/main/resources/templates/member/member-create.html
+++ b/src/main/resources/templates/member/member-create.html
@@ -1,48 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th = "http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>회원가입</title>
+    <title>member-create</title>
+    <style>
+        body {
+          background-color : lightsteelblue;
+        }
+    </style>
 </head>
 <body>
-    <div th:replace="member/header :: headerFragment"></div>
-    <h1>회워가입</h1>
-    <form id="memberCreateForm">
-        <div>
-            <label for="name">이름</label>
-            <input type="text" id="name" name="name">
-        </div>
-        <div>
-            <label for="email">이메일</label>
-            <input type="email" id="email" name="email">
-        </div>
-        <div>
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" name="password">
-        </div>
-        <input type="submit" value="회원가입">
-    </form>
-
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
-        document.getElementById("memberCreateForm").addEventListener('submit',
-            async function(event){
-                event.preventDefault();
-                const name = document.getElementById("name").value;
-                const email = document.getElementById("email").value;
-                const password = document.getElementById("password").value;
-
-                try{
-                    const response = await axios.post('http://localhost:8080/member/create', {name, email, password});
-                    console.log(response.data);
-                }catch(e){
-                    console.log(e);
-                }
-            }
-        )
-    </script>
-
-
-
+<div th:replace="member/header :: headerFragment"></div>
+<div style="text-align: center">
+    <h1>회원가입</h1>
+    <div>
+        <form action="/member/create" method="post">
+            <label for="name"></label>이름
+            <input type="text" id="name" name="name"><br>
+            <label for="email"></label>이메일
+            <input type="text" id="email" name="email"><br>
+            <label for="password"></label>비밀번호
+            <input type="text" id="password" name="password"><br>
+            <button type="submit">가입</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
