--- a/src/main/resources/templates/member/member-list.html
+++ b/src/main/resources/templates/member/member-list.html
@@ -10,11 +10,10 @@
     <h1>회원 목록 조회</h1>
 
     <table>
-        <tr><th>이름</th><th>이메일</th><th>비밀번호</th></tr>
+        <tr><th>이름</th><th>이메일</th></tr>
         <tr th:each="member: ${memberList}">
             <td th:text="${member.name}"></td>
             <td th:text="${member.email}"></td>
-            <td th:text="${member.password}"></td>
         </tr>
     </table>
 
