--- a/src/main/resources/templates/member/member-detail.html
+++ b/src/main/resources/templates/member/member-detail.html
@@ -8,6 +8,24 @@
 <div th:replace="member/header :: headerFragment"></div>
 
 <h1>회원 상세 조회</h1>
+    <table>
+        <tr>
+            <td>ID : </td>
+            <td th:text="${member.id}"></td>
+        </tr>
+        <tr>
+            <td>NAME : </td>
+            <td th:text="${member.name}"></td>
+        </tr>
+        <tr>
+            <td>EMAIL : </td>
+            <td th:text="${member.email}"></td>
+        </tr>
+        <tr>
+            <td>PASSWORD : </td>
+            <td th:text="${member.password}"></td>
+        </tr>
+    </table>
 
 </body>
 </html>
