--- a/src/main/resources/templates/member/member-list.html
+++ b/src/main/resources/templates/member/member-list.html
@@ -10,11 +10,14 @@
     <h1>회원 목록 조회</h1>
 
     <table>
-        <tr><th>이름</th><th>이메일</th></tr>
+        <tr><th>ID</th><th>이름</th><th>이메일</th></tr>
         <tr th:each="member: ${memberList}">
+            <td th:text="${member.id}"></td>
             <td th:text="${member.name}"></td>
             <td th:text="${member.email}"></td>
-        </tr>
+            <td>
+                <a th:text="${member.id}" th:href="@{/member/detail/{id}(id=${member.id})}">상세조회</a>
+            </td>        </tr>
     </table>
 
 </body>
