--- a/src/main/resources/templates/member/member-detail.html
+++ b/src/main/resources/templates/member/member-detail.html
@@ -25,6 +25,11 @@
             <td>PASSWORD : </td>
             <td th:text="${member.password}"></td>
         </tr>
+        <tr>
+            <td>가입일시 : </td>
+            <td th:text="${member.createdTime}"></td>
+        </tr>
+
     </table>
 
 </body>
